<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/weather_main_info_other_marginTop"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingLeft="@dimen/main_paddingLeft"
        android:textSize="@dimen/minTextSize"
        android:textColor="@color/colorText"
        android:text="@string/todayForecast" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/today"
        android:textColor="@color/colorText"
        android:textSize="@dimen/minTextSize" />

    <TextView
        android:id="@+id/todayDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/dateToday"
        android:textColor="@color/colorText"
        android:textSize="@dimen/minTextSize" />
</LinearLayout>